Implement register and login flow, add readme for setup and swagger for documentation
